# NICERsoft

./: .gitattributes  .gitignore  HOWTO  LICENSE  MANIFEST.in  README.md  ni_Htest_sortgti.py  requirements.txt  setup.cfg
data/: MCC1_On_Console_20171631440_V01.txt  MCC1_On_Console_20171651454_V01.txt  ObsIDs_badMPU1.txt  event_filtspec.txt  gaincal_linear.txt  gti_columns.txt  gti_header.txt  makereg.py  neph_lonlat.txt  nicer.arf  nicer_saa.reg  nicer_saa.txt  nph_lonlat.txt  plotmap.py  polarhorns.reg  saa.reg  saa_lonlat.txt  saa_lonlat_1E3.txt  sph_lonlat.txt
data/CrabResiduals/: residualsday_v1p02_06112018.pha  (+2 more)
data/KP-potsdam/: kp1701.tab  (+32 more)
nicer/: NicerFileSet.py  __init__.py  bkg_plots.py  cartographer.py  eng_plots.py  fillgaps-champagne.py  fillgaps.py  fitsutils.py  fourier.py  latloninterp.py  mcc.py  plotutils.py  sci_plots.py  sigmaz.py  sps.py  values.py  yday_custom.py
scripts/: InteractiveLC.py  RPP-driver-onoff.py  RPP-driver-onoff.py~  RPP-driver.py  RPP-driver_v2.py  RPP-prep.py  RPP-profile.py  RPP-pulsed_errorsfluxes.py  RPP-pulsed_yml.py  RPP-pulsedspec.py  RPP-scorpeon_errorsfluxes.py  RPP-scorpeon_yml.py  RPP-spec-from-xcm.py  RPP-spec-onoff.py  RPP-spec-onoff.py~  RPP-spec.py  RPP-spec_v3.py  RPP-xcm-plot-onoff.py  RPP-xcm-plot.py  add_kp.py  anomaly.py  anomaly.py~  bkgpipe.py  calcdeadtime.py  calcrms.py  cartographer.py  cr_cut.py  createplots.py  createplots.py~  eng_plots.py  eng_plots.py~  fillgaps_examples.ipynb  fitharms.py  fix_template.py  functionality.py  functionality.py~  get_nicer_aws.py  gpsvalid.py  issorb.py  issorball.py  (+41 more)
