[metadata]
name = nicersoft
description = nicersoft
long_description = file: README.md
url = https://github.com/paulray/NICERsoft
## ORDER AUTHORS BY CONTRIBUTIONS
authors = Paul S. Ray, M. Kerr, S. Guillot, F. Huyinh, C. Champagne, M. Ng, P. Bult, J. Deneva
author_email = paul.ray@nrl.navy.mil
license = ....

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    astropy
    loguru
    pint-pulsar
    scipy
    matplotlib
    tqdm

